--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
   <string name="app_name">Popular Movies</string>
   <string name="MovieName">MovieName</string>
+  <string name="movie_title">Movie Title</string>
+  <string name="release_date">Release Date</string>
+  <string name="average_rating">Average Rating</string>
+  <string name="plot_synopsis">Plot Synopsis</string>
 </resources>
