--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="sort_movies">SORT</string>
   <string name="sort_popularity">Most Popular</string>
   <string name="sort_top_rated">Highest Rated</string>
+  <string name="movie_trailer_title">Trailers</string>
 </resources>
