--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
   <string name="sort_top_rated">Highest Rated</string>
   <string name="movie_trailer_title">Trailers</string>
   <string name="reviews">Reviews</string>
+  <string name="favouriteButtonText">Add to Favourites</string>
 </resources>
