Favourites now submitting and removing from db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
   <string name="movie_trailer_title">Trailers</string>
   <string name="reviews">Reviews</string>
   <string name="favouriteButtonText">Add to Favourites</string>
+  <string name="Unfavourite">Unfavourite</string>
+  <string name="Favourite">Favourite</string>
 </resources>
