--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
   <string name="favouriteButtonText">Add to Favourites</string>
   <string name="Unfavourite">Unfavourite</string>
   <string name="Favourite">Favourite</string>
+  <string name="Favourites">Favourites</string>
 </resources>
